--- a/index.html
+++ b/index.html
@@ -1,6 +1,57 @@
-<html>
-    <title>CodeMk</title>
-    <body style="background-color: black;">
-        <p style="font-family: monospace; color: orange;">CodeMk.</p>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Flexgrid Example</title>
+  <style>
+    body, html {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      background-color: #000000;
+    }
+
+    .flex-container {
+      display: flex;
+      flex-wrap: wrap;
+      height: 100%;
+    }
+
+    .flex-item {
+      width: 20%;
+      padding: 10px;
+      box-sizing: border-box;
+      border: 1px solid #000000;
+      height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: orange;
+      font-family: monospace;
+    }
+
+    .flex-item:nth-child(2),
+    .flex-item:nth-child(3) {
+      width: 30%;
+    }
+
+    .flex-item:nth-child(3) img {
+      max-width: 100%;
+      height: auto;
+      display: block;
+    }
+  </style>
+</head>
+<body>
+  <div class="flex-container">
+    <div class="flex-item"></div>
+    <div class="flex-item">Welcome to CodeMk. </div>
+    <div class="flex-item">
+      <!-- Image in the third column -->
+      <img src="logo.png" alt="Image">
+    </div>
+    <div class="flex-item"></div>
+  </div>
+</body>
 </html>
