Basic landing page - copy.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <body>
   <div class="flex-container">
     <div class="flex-item"></div>
-    <div class="flex-item">Welcome to CodeMk. A collotection of tools for analysing your team's development practices.</div>
+    <div class="flex-item">Welcome to CodeMk. A colletection of tools for analysing your team's development practices.</div>
     <div class="flex-item">
       <!-- Image in the third column -->
       <img src="logo.png" alt="Image">
