Basic landing page - menu.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Flexgrid Example</title>
+  <title>CodeMk</title>
   <style>
     body, html {
       margin: 0;
@@ -41,17 +41,54 @@
       height: auto;
       display: block;
     }
+
+    .header{
+        background-color: rgba(245, 241, 236, 0.229);
+        font-family: monospace;        
+    }
+
+    ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        background-color: #333333;
+    }
+
+    li {
+        float: left;
+    }
+
+    li a {
+        display: block;
+        color: white;
+        text-align: center;
+        padding: 16px;
+        text-decoration: none;
+    }
+
+    li a:hover {
+        background-color: #111111;
+    }
+
   </style>
 </head>
 <body>
-  <div class="flex-container">
-    <div class="flex-item"></div>
-    <div class="flex-item">Welcome to CodeMk. A colletection of tools for analysing your team's development practices.</div>
-    <div class="flex-item">
-      <!-- Image in the third column -->
-      <img src="logo.png" alt="Image">
+    <div class="header">
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#news">News</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <li><a href="#about">About</a></li>
+          </ul>
     </div>
-    <div class="flex-item"></div>
-  </div>
+    <div class="flex-container">
+        <div class="flex-item"></div>
+        <div class="flex-item">Welcome to CodeMk. A collection of tools for analysing your team's development practices.</div>
+        <div class="flex-item">
+          <img src="logo.png" alt="Image">
+        </div>
+        <div class="flex-item"></div>
+    </div>
 </body>
 </html>
